replace rs-nav-item with rs-dropdown-item

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -83,27 +83,29 @@
               <div class="rs-popover-content">
                 <div class="rs-nav-popover">
                   <div class="rs-nav-menu">
-                    <h4 class="rs-quiet rs-dropdown-category">Cloud Servers</h4>
-                    <ul class="rs-nav-menu-items">
-                      <li class="rs-nav-menu-item">
+                    <ul class="rs-dropdown-items">
+                      <li class="rs-dropdown-item">
+                        <h4 class="rs-quiet rs-dropdown-category">Cloud Servers</h4>
+                      </li>
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers" data-subnav="servers">Cloud Servers</a>
                       </li>
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#images" class="rs-dropdown-text" data-subnav="images">Saved Images</a>
                       </li>
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#auto-scale" class="rs-dropdown-link" data-subnav="auto-scale">Auto Scale</a>
                       </li>
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#ssh-keys" class="rs-dropdown-link" data-subnav="ssh-keys">SSH Keys</a>
                       </li>
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
                         <a href="https://intelligence.rackspace.com" class="rs-dropdown-link" data-subnav="cloud-intelligence" target="_blank">Cloud Intelligence<i class="rs-icon-external"></i></a>
                       </li>
-                    </ul>
-                    <h4 class="rs-quiet rs-dropdown-category">Cloud Servers</h4>
-                    <ul class="rs-nav-menu-items">
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
+                        <h4 class="rs-quiet rs-dropdown-category">Data Processing</h4>
+                      </li>
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#big-data" class="rs-dropdown-link" data-subnav="big-data">
                           Big Data
                         </a>
@@ -112,12 +114,14 @@
                     </ul>
                   </div>
                   <div class="rs-task-menu">
-                    <h4 class="rs-quiet rs-dropdown-category">Create Resources</h4>
-                    <ul class="rs-nav-menu-items">
-                      <li class="rs-nav-menu-item">
+                    <ul class="rs-dropdown-items">
+                      <li class="rs-dropdown-item">
+                        <h4 class="rs-quiet rs-dropdown-category">Create Resources</h4>
+                      </li>
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#new" class="rs-dropdown-link" data-subnav="None">Server...</a>
                       </li>
-                      <li class="rs-nav-menu-item">
+                      <li class="rs-dropdown-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/load_balancers#new" class="rs-dropdown-link" data-subnav="None">Load Balancer...</a>
                       </li>
                     </ul>
