Fix broken links on the Github Pages page.

--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
   <span class="grey">https://eafdbc63c97ce6bec9ef-b0a668e5876bef6fe25684caf71db405.ssl.cf1.rackcdn.com</span>/v1-latest/canon.min.js
 </div>
 <div class="box-border rounded">
-  <span class="grey">https://eafdbc63c97ce6bec9ef-b0a668e5876bef6fe25684caf71db405.ssl.cf1.rackcdn.com</span>/v1-latest//canon.min.css
+  <span class="grey">https://eafdbc63c97ce6bec9ef-b0a668e5876bef6fe25684caf71db405.ssl.cf1.rackcdn.com</span>/v1-latest/canon.min.css
 </div></p>
 
-<p><a href="/get-started/#versioning">View All Versions</a>
+<p><a href="/canon/get-started/#versioning">View All Versions</a>
 <br><br></p>
 
 <h3>Step 2: Use Canon class names in your HTML</h3>
 
-<p>Try implementing Canon in baby steps. For example, start with the &quot;frame&quot; or <a href="/app-layout/">App Layout</a> before the content areas. This makes changes easier on your users as well.
+<p>Try implementing Canon in baby steps. For example, start with the &quot;frame&quot; or <a href="/canon/app-layout/">App Layout</a> before the content areas. This makes changes easier on your users as well.
 <br><br></p>
 
 <h3>Step 3: Sign up for our mailing list</h3>
