refactor(screenshots): removes white background from screenshots files

--- a/examples/screenshots/cascade.html
+++ b/examples/screenshots/cascade.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 
-<body class="rs-responsive" style="background: #fff;padding:30px;">
+<body class="rs-responsive" style="padding:40px;">
   <h2>Size: Default</h2>
   <div class="rs-cascade" style="width:690px;">
     <div class="rs-cascade-column" style="width: 30%">
@@ -56,7 +56,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -90,10 +90,10 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content" id="item-one-child-a-details">
         <div class="rs-inner">
-          <h3>Item One - Child A Description</h3>
+          <h3>Item One - Child A Not Sortable</h3>
           <hr>
           <p>Descriptive stuff can go here</p>
         </div>
@@ -151,7 +151,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -185,10 +185,10 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content" id="item-one-child-a-details">
         <div class="rs-inner">
-          <h3>Item One - Child A Description</h3>
+          <h3>Item One - Child A Not Sortable</h3>
           <hr>
           <p>Descriptive stuff can go here</p>
         </div>
@@ -246,7 +246,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -280,10 +280,10 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content" id="item-one-child-a-details">
         <div class="rs-inner">
-          <h3>Item One - Child A Description</h3>
+          <h3>Item One - Child A Not Sortable</h3>
           <hr>
           <p>Descriptive stuff can go here</p>
         </div>
@@ -341,7 +341,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -369,7 +369,7 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content">
           <div class="rs-cascade-message">Please select a thing</div>
       </div>
@@ -381,7 +381,7 @@
   <br>
   <h2>Loading Entire Cascade:</h2>
   <div class="rs-cascade" style="width:690px;">
-    <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-loading-indicator"></i></span></div>
+    <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon rs-loading-indicator"></i></span></div>
   </div>
   <br>
   <br>
@@ -389,7 +389,7 @@
   <br>
   <h2>Error Loading Cascade:</h2>
   <div class="rs-cascade" style="width:690px;">
-    <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon-error-indicator"></i> Error loading content</span></div>
+    <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon rs-icon-error-indicator"></i> Error loading content</span></div>
   </div>
   <br>
   <br>
@@ -442,7 +442,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -476,9 +476,9 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content" id="item-one-child-a-details">
-        <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-loading-indicator"></i></span></div>
+        <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon rs-loading-indicator"></i></span></div>
       </div>
     </div>
   </div>
@@ -533,7 +533,7 @@
     <div class="rs-cascade-column" style="width: 22%">
       <div class="rs-cascade-column-header">
         <a href="#" class="rs-table-sort hover">
-          <span class="rs-table-sort-text">Not Sorted</span>
+          <span class="rs-table-sort-text">Sortable</span>
           <span class="rs-table-sort-indicator"></span>
         </a>
       </div>
@@ -567,9 +567,9 @@
       </div>
     </div>
     <div class="rs-cascade-column" style="width: 48%">
-      <div class="rs-cascade-column-header">Description</div>
+      <div class="rs-cascade-column-header">Not Sortable</div>
       <div class="rs-cascade-column-content" id="item-one-child-a-details">
-        <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon-error-indicator"></i> Error loading content</span></div>
+        <div class="rs-cascade-message"><span class="rs-status-error"><i class="rs-icon rs-icon-error-indicator"></i> Error loading content</span></div>
       </div>
     </div>
   </div>
