--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -8,9 +8,23 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
     <div class="rs-detail-header">
+      <ul class="rs-breadcrumbs">
+    <li class="rs-breadcrumb-item">
+      <a href="" class="rs-breadcrumb-link">Rackspace Cloud</a>
+    </li>
+    <li class="rs-breadcrumb-item">
+      <a href="" class="rs-breadcrumb-link">Accounts</a>
+    </li>
+    <li class="rs-breadcrumb-item">
+      <a href="" class="rs-breadcrumb-link">WoW Pre-Production</a>
+    </li>
+    <li class="rs-breadcrumb-item">
+      <span class="rs-breadcrumb-text">Cloud Servers</span>
+    </li>
+  </ul>
       <div class="rs-detail-header-actions">
         <button class="rs-btn rs-btn-action">
           <span class="rs-cog"></span>
