--- a/examples/screenshots/form-create.html
+++ b/examples/screenshots/form-create.html
@@ -8,14 +8,14 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <form class="rs-form-create">
     <fieldset>
       <legend>Create Form - Control Group</legend>
       <div class="rs-control-group">
         <label class="rs-control-label">One is a really long label that wraps, but Canon still works</label>
         <div class="rs-controls">
-          <input type="text">
+          <input type="text" name="name" placeholder="Placeholder...">
           <span class="rs-help-inline">This is inline help text.</span>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="rs-control-group">
         <label class="rs-control-label">Six</label>
         <div class="rs-controls">
-          <input type="text"> GB
+          <input type="text" placeholder="Brief Instructions..."> GB
           <span class="rs-help-block">This is some subtext.</span>
         </div>
       </div>
