--- a/examples/screenshots/form-horizontal.html
+++ b/examples/screenshots/form-horizontal.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <form class="rs-form-horizontal">
     <fieldset>
       <legend>Horizontal Form</legend>
@@ -48,7 +48,7 @@
       <div class="rs-control-group">
         <label class="rs-control-label">Four</label>
         <div class="rs-controls">
-          <input type="text"> GB
+          <input type="text"> <span class="rs-help-inline">GB</span><br>
           <span class="rs-help-block">This is some subtext.</span>
         </div>
       </div>
