--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="padding: 40px;">
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
@@ -29,8 +29,8 @@
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">One</a></li>
         <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Two</a></li>
         <li class="rs-dropdown-item"><span class="rs-dropdown-category">More Links</span></li>
-        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Three</a></li>
-        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Four</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Default</a></li>
+        <li class="rs-dropdown-item"><a class="rs-dropdown-link hover" href="#">Hover</a></li>
         <li class="rs-dropdown-item disabled"><a class="rs-dropdown-link" href="#">Disabled</a></li>
       </ul>
     </div>
