--- a/examples/screenshots/messages.html
+++ b/examples/screenshots/messages.html
@@ -29,7 +29,7 @@
               <div class="rs-detail-header-title">Messages</div>
             </div>
             <div class="rs-message rs-message-embedded rs-status-warning">
-              <button type="button" class="rs-btn rs-close"></button>
+              <i type="button" class="rs-icon rs-icon-close"></i>
               <div class="rs-message-content">
                 <div class="rs-message-title">Embedded Banner Message:</div>
                 <div class="rs-message-description">
@@ -50,29 +50,37 @@
               <div class="rs-detail-section-body">
                 <!-- Start Section Content -->
                 <div class="rs-message rs-status-info">
-                  <button type="button" class="rs-btn rs-close"></button>
+                  <i class="rs-icon rs-message-icon"></i>
+                  <i type="button" class="rs-icon rs-icon-close"></i>
                   <div class="rs-message-content">
+                    <a href="" class="rs-message-action">Take Action</a>
                     <div class="rs-message-title">Information Message Title:</div>
                     <div class="rs-message-description">For all those times when you don't need to alarm someone, but you have to tell them something.</div>
                   </div>
                 </div>
                 <div class="rs-message rs-status-ok">
-                  <button type="button" class="rs-btn rs-close"></button>
+                  <i class="rs-icon rs-message-icon"></i>
+                  <i type="button" class="rs-icon rs-icon-close"></i>
                   <div class="rs-message-content">
+                    <a href="" class="rs-message-action">Take Action</a>
                     <div class="rs-message-title">Success Message Title:</div>
                     <div class="rs-message-description">Something or other has been successfully done. Good job Padawan.</div>
                   </div>
                 </div>
                 <div class="rs-message rs-status-warning">
-                  <button type="button" class="rs-btn rs-close"></button>
+                  <i class="rs-icon rs-message-icon"></i>
+                  <i type="button" class="rs-icon rs-icon-close"></i>
                   <div class="rs-message-content">
-                    <div class="rs-message-title">Critical Maintenance Notification:</div>
+                    <a href="" class="rs-message-action">Take Action</a>
+                    <div class="rs-message-title">Warning Message:</div>
                     <div class="rs-message-description">To perform a critical maintenance task, some Cloud Server instances must be power cycled.</div>
                   </div>
                 </div>
                 <div class="rs-message rs-status-error">
-                  <button type="button" class="rs-btn rs-close"></button>
+                  <i class="rs-icon rs-message-icon"></i>
+                  <i type="button" class="rs-icon rs-icon-close"></i>
                   <div class="rs-message-content">
+                    <a href="" class="rs-message-action">Take Action</a>
                     <div class="rs-message-title">Error Message Title:</div>
                     <div class="rs-message-description">Blah blah blah, yakkity schmakkity!</div>
                   </div>
@@ -83,6 +91,8 @@
             <!-- End Entity Details Detail Section -->
           </div>
           <!-- End Content Panel -->
+
+
         </div>
       </div>
     </div>
