--- a/examples/screenshots/tabs.html
+++ b/examples/screenshots/tabs.html
@@ -6,7 +6,7 @@
   <title>Screenshot | Tabs</title>
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="padding: 40px;">
     <ul class="rs-tabs">
       <li><a href="#one">Normal <span class="rs-quiet">(1)</span></a></li>
@@ -16,13 +16,19 @@
 
     <div class="rs-tab-content">
       <div class="rs-tab-pane">
-        <p>Tab content pane one</p>
+        <div class="rs-inner">
+          <p>Tab content pane one</p>
+        </div>
       </div>
       <div class="rs-tab-pane active">
-        <p>Tab content pane two</p>
+        <div class="rs-inner">
+          <p>Tab content pane two</p>
+        </div>
       </div>
       <div class="rs-tab-pane">
-        <p>Tab content pane three</p>
+        <div class="rs-inner">
+          <p>Tab content pane three</p>
+        </div>
       </div>
     </div>
   </div>
