--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -17,7 +17,7 @@
 
   </style>
 </head>
-<body class="rs-responsive">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="padding: 40px">
     <p>I'm something complicated. <i class="rs-icon-help"></i></p>
     <div class="rs-tooltip">
