--- a/examples/screenshots/typography.html
+++ b/examples/screenshots/typography.html
@@ -8,36 +8,28 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
-<div style="max-width: 700px; padding: 20px;">
-  <h4>Headings</h4>
+<body class="rs-responsive" style="padding: 40px;">
+<div style="max-width: 1200px; padding: 20px;">
+
+  <h1 class="display">H1 Display: Roboto Thin 100 (3em / 48px)</h1>
+  <h1>H1 Normal: Roboto Regular 400 (1.5em / 24px)</h1>
+  <h1 class="light">H1 Light: Roboto Light 300 (1.5em / 24px)</h1>
+  <h2>H2: Roboto Regular 400 (1.25em / 20px)</h2>
+  <h3>H3: Roboto Medium 500 (1em / 16px)</h3>
+  <h4>h4 Sub-Body: Roboto Medium 500 (.813em / 13px)</h4>
+  
   <hr>
-  <h1>h1 - Heading 1</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h2>h2. Heading 2</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h2 class="rs-page-title">h2.rs-page-title Heading 2</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h3>h3. Heading 3</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h4>h4. Heading 4</h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h5>h5. Heading 5</h5>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h6>h6. Heading 6</h6>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, temporibus, magnam saepe id obcaecati minima a quasi amet odio earum dolorum illum ipsa labore veniam quaerat natus molestiae maiores soluta.</p>
-  <h4>Body Copy</h4>
+  <p><strong>Body Regular: Roboto Regular 400 (1em / 16px) :</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, inventore ratione velit iste earum quas sunt necessitatibus quos dolorum distinctio minima optio itaque. Cumque, eveniet, hic fuga nostrum repellendus exercitationem!</p>
+
+  <p class="small"><strong>Body Small : Roboto Regular 400 (.875em / 14px) :</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, inventore ratione velit iste earum quas sunt necessitatibus quos dolorum distinctio minima optio itaque. Cumque, eveniet, hic fuga nostrum repellendus exercitationem!</p>
+
+  
+  <p class="extra-small"><strong>Body Extra Small: Roboto Regular 400 (.75em / 12px):</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, inventore ratione velit iste earum quas sunt necessitatibus quos dolorum distinctio minima optio itaque. Cumque, eveniet, hic fuga nostrum repellendus exercitationem!</p>
+  
+  <p><a href="">Links: Roboto Regular 400 (1em / 16px)</a></p>
+
+
   <hr>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum <a href="#">dolore eu fugiat nulla</a> pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Minus, inventore ratione velit iste earum quas <code>sunt necessitatibus</code> quos dolorum distinctio minima optio itaque.</p>
-  <pre><code>$ git clone https://github.com/rackerlabs/canon.git
-$ script/bootstrap
-$ grunt server</code></pre>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, atque explicabo voluptate soluta quibusdam distinctio perferendis error ab. Repudiandae, quasi quidem aliquid ab dolorum. Dolorum ex dolores asperiores incidunt deleniti.</p>
   <ol>
     <li>One</li>
     <li>
