--- a/examples/screenshots/create-view.html
+++ b/examples/screenshots/create-view.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding:40px;">
   <div style="width: 800px; margin: 0 auto; border: 1px solid #ddd;">
     <form class="rs-form-create">
       <div class="rs-create-header">
