--- a/examples/screenshots/embedded-list-table-error.html
+++ b/examples/screenshots/embedded-list-table-error.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="padding: 40px;">
     <div class="rs-embedded-list-table-wrapper rs-embedded-medium">
       <table class="rs-list-table rs-embedded-list-table">
@@ -46,7 +46,7 @@
       </table>
       <div class="rs-table-overlay rs-table-overlay-error">
         <div class="rs-table-overlay-content">
-          <div class="rs-table-overlay-message"><i class="rs-icon-error-indicator"></i>This is an error message.</div>
+          <div class="rs-table-overlay-message"><i class="rs-icon rs-icon-error-indicator"></i>This is an error message.</div>
         </div>
       </div>
     </div>
