--- a/examples/screenshots/embedded-list-table.html
+++ b/examples/screenshots/embedded-list-table.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <div style="padding: 40px;">
     <div class="rs-embedded-list-table-wrapper rs-embedded-medium">
       <table class="rs-list-table rs-embedded-list-table">
