--- a/examples/screenshots/form-vertical.html
+++ b/examples/screenshots/form-vertical.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body class="rs-responsive" style="background: #fff;">
+<body class="rs-responsive" style="padding: 40px;">
   <form class="rs-form">
     <fieldset>
       <legend>Vertical Form</legend>
