--- a/examples/screenshots/progress-bar.html
+++ b/examples/screenshots/progress-bar.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
-<body style="background: #fff;">
+<body  style="padding: 40px;">
   <div style="width: 500px; margin: 0 auto; padding: 40px;">
 
     <h2>Green - Ok</h2>
