--- a/examples/screenshots/status.html
+++ b/examples/screenshots/status.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="/canon.css">
   </head>
-  <body class="rs-responsive" style="background: #fff;">
+  <body class="rs-responsive" style="padding:40px;">
     <!-- Status Label -->
     <p>
       <span class="rs-status">Default</span>
